fix height on mobile

--- a/main.css
+++ b/main.css
@@ -18,14 +18,14 @@
         width: 100vw;
         height: 100vh;
         grid-template-columns: 4% 1fr repeat(3,5%) 2% 0%;
-        grid-template-rows: 0% 4% repeat(3,4%) 6.5% repeat(5, 1fr) repeat(3,5%) 20% 1%;
+        grid-template-rows: 0% 4% repeat(3,4%) 6.5% repeat(5, 1fr) repeat(3,5%) 20% 2%;
     
     }
     100% {
         width: 100vw;
         height: 100vh;
         grid-template-columns: 4% 1fr repeat(3,5%) 2% 0%;
-        grid-template-rows: 0% 4% repeat(3,4%) 4% repeat(5, 1fr) repeat(3,8%) 22% 1%;
+        grid-template-rows: 0% 4% repeat(3,4%) 4% repeat(5, 1fr) repeat(3,8%) 28% 3%;
     
     }
 }
@@ -151,7 +151,7 @@ h1, p, a {
     background-color: var(--black);
     display: grid;
     grid-template-columns: 4% 1fr repeat(3,5%) 2% 0%;
-    grid-template-rows: 0% 4% repeat(3,4%) 4% repeat(5, 1fr) repeat(3,8%) 22% 1%;
+    grid-template-rows: 0% 4% repeat(3,4%) 4% repeat(5, 1fr) repeat(3,8%) 28% 3%;
     grid-gap: 0.75vmin;
 
     animation: animate-canvas 7s;
